Renaming FvwmTiler to FvwmPiazza

--- a/README
+++ b/README
@@ -1,12 +1,12 @@
 
 ==== NAME ====
 
-FvwmTiler::Tiler - Fvwm module for tiling windows.
+FvwmPiazza::Tiler - Fvwm module for tiling windows.
 
 
 ==== VERSION ====
 
-This describes version 0.01 of FvwmTiler::Tiler.
+This describes version 0.01 of FvwmPiazza::Tiler.
 
 
 ==== DESCRIPTION ====
